Migrate HTTP/2 to the new buffer API
Motivation:
This is the last big Netty core module that was still using ByteBuf.

Modification:
The http2 module has been changed to use Buffer instead of ByteBuf.
Various types have also changed from being reference counted to being resources.

Result:
The remaining usages of ByteBuf are now much reduced and we are on the path to being able to drop our temporary Netty 4.1 dependency.